public class Animal {
    public String Name;
    public int Age;
    public boolean female;
}
