public class Cat extends Animal implements Pet {
    public String playful;
    public String breed;

    public String toString(){
        return playful;
    }
}
