public class Fish extends Animal implements Pet{
    public String playful;
    public int swimspeed;

    public String toString(){
        return playful;
    }
}
