public interface Pet {
    public String playful;
}
